<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HandsOn</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_delete">Delete</string>
    <string name="action_share">Share</string>
    <string name="action_mustache">Mustache</string>
    <string name="action_save">Save</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="button_camera">Take a picture</string>
    <string name="button_camera_internal">Take a picture with own camera</string>
    <string name="button_gallery">View gallery</string>
    <string name="title_activity_main">Android Hands On</string>
    <string name="title_activity_display_message">Displaying the message</string>
    <string name="hello">Default Hello!</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="button_capture">Capture</string>
    <string name="button_discard">Descartar</string>    
    <string name="button_ok">OK</string>
    <string name="title_activity_gallery">GalleryActivity</string>    
    <string name="imageview_description">Image Thumbnail</string>
    <string name="title_activity_image_detail">ImageDetailActivity</string>
	<string name="select">Select</string>
	<string name="savingMessage">Saving changes. . .</string>
</resources>
