<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/main_activity_background"
    tools:context=".MainActivity" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin" >
		    
		    <ImageButton
		        android:layout_width="wrap_content"		        
		        android:layout_height="wrap_content"
		        android:src="@drawable/blue_camera_icon"
		        android:contentDescription="@string/button_camera"
		        android:onClick="dispatchTakePictureInternal"
		        style="@style/ImageButton"
		        android:background="@drawable/round_button" />
		    
		    <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/select"
		        android:paddingLeft="5dp"
		        android:paddingRight="5dp"/>

		    <ImageButton
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"		        
		        android:src="@drawable/gallery_icon"
		        android:contentDescription="@string/button_gallery"
		        android:onClick="dispatchGallery"
		        style="@style/ImageButton"
		        android:background="@drawable/round_button" />
	    
	    </LinearLayout>
</LinearLayout>